Added some unit tests for all algorithms

--- a/Tests/Tests.vcxproj
+++ b/Tests/Tests.vcxproj
@@ -99,8 +99,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)AES\$(PlatformTarget)\$(Configuration);$(SolutionDir)RC4\$(PlatformTarget)\$(Configuration);$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>aes.obj;rc4.obj;rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -115,8 +115,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalLibraryDirectories>$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)AES\$(PlatformTarget)\$(Configuration);$(SolutionDir)RC4\$(PlatformTarget)\$(Configuration);$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>aes.obj;rc4.obj;rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -135,8 +135,8 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)AES\$(PlatformTarget)\$(Configuration);$(SolutionDir)RC4\$(PlatformTarget)\$(Configuration);$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>aes.obj;rc4.obj;rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -155,12 +155,15 @@
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)AES\$(PlatformTarget)\$(Configuration);$(SolutionDir)RC4\$(PlatformTarget)\$(Configuration);$(SolutionDir)RSA\$(PlatformTarget)\$(Configuration);$(VCInstallDir)UnitTest\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>aes.obj;rc4.obj;rsa.obj;euclidean.obj;bigint.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="aes.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="rc4.cpp" />
+    <ClCompile Include="rsa.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AES\AES.vcxproj">
